Have no clue how to name this

--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,1 +1,3 @@
 MONGO_URI = mongodb+srv://admin:pRFeIBkL4EHXfjbA@cluster0.uukfz8s.mongodb.net/AngularProject?retryWrites=true&w=majority
+
+JWT_SECRET = pRFeIpRFeIBkL4EHXfjbA@cluBkL4EHXfjbA@clu
