--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cd src && nodemon server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install && tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,14 +19,14 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
-    "typescript": "^4.9.3"
-  },
-  "devDependencies": {
+    "typescript": "^4.9.3",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
+    "@types/jsonwebtoken": "^8.5.9"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   }
