--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -38,6 +38,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "lodash"
+           ],
             "outputPath": "../backend/built/public",
             "index": "src/index.html",
             "main": "src/main.ts",
