--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,11 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/leaflet": "^1.9.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "jasmine-core": "~4.3.0"
 
   },
   "devDependencies": {
-
-    "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
