--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -19,14 +24,11 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
-    "typescript": "^4.9.3",
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9"
+    "node-telegram-bot-api": "^0.60.0",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.57.6",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   }
